--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "8080:8080"
     environment:
       - GIN_MODE=release
+      - RUNNING_IN_DOCKER=true
     volumes:
       - ~/.kube/config:/root/.kube/config
 
