Updated GitHub Actions

--- a/.github/workflows/pr-version-bump-build.yml
+++ b/.github/workflows/pr-version-bump-build.yml
@@ -2,7 +2,7 @@ name: PR Version Bump and Build
 
 on:
   pull_request:
-    types: [labeled]
+    types: [closed]
 
 env:
   REGISTRY: ghcr.io
@@ -10,7 +10,7 @@ env:
 
 jobs:
   bump-and-build:
-    if: github.event.label.name == 'bump-version'
+    if: github.event.pull_request.merged == true && (contains(github.event.pull_request.labels.*.name, 'bump-major-version') || contains(github.event.pull_request.labels.*.name, 'bump-minor-version') || contains(github.event.pull_request.labels.*.name, 'bump-patch-version'))
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: ${{ github.event.pull_request.base.ref }}
           fetch-depth: 0
 
       - name: Configure Git
@@ -30,6 +30,8 @@ jobs:
 
       - name: Bump Version
         id: bump_version
+        env:
+          LABELS: ${{ toJSON(github.event.pull_request.labels) }}
         run: |
           # Read current version from package.json
           CURRENT_VERSION=$(jq -r .version ui/package.json)
@@ -41,9 +43,21 @@ jobs:
           MINOR="${VERSION_PARTS[1]}"
           PATCH="${VERSION_PARTS[2]}"
           
-          # Increment minor version
-          NEW_MINOR=$((MINOR + 1))
-          NEW_VERSION="$MAJOR.$NEW_MINOR.0"
+          # Determine bump type
+          if echo "$LABELS" | grep -q "bump-major-version"; then
+            NEW_MAJOR=$((MAJOR + 1))
+            NEW_VERSION="$NEW_MAJOR.0.0"
+          elif echo "$LABELS" | grep -q "bump-minor-version"; then
+            NEW_MINOR=$((MINOR + 1))
+            NEW_VERSION="$MAJOR.$NEW_MINOR.0"
+          elif echo "$LABELS" | grep -q "bump-patch-version"; then
+            NEW_PATCH=$((PATCH + 1))
+            NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
+          else
+            echo "No version bump label found."
+            exit 1
+          fi
+          
           echo "New version: $NEW_VERSION"
           
           # Update ui/package.json
