Added git tagging to GitHub Actions

--- a/.github/workflows/pr-version-bump-build.yml
+++ b/.github/workflows/pr-version-bump-build.yml
@@ -74,7 +74,9 @@ jobs:
           
           git add ui/package.json internal/version/version.go
           git commit -m "Bump version to v$NEW_VERSION"
-          git push
+          git tag "v$NEW_VERSION"
+          git push origin HEAD
+          git push origin "v$NEW_VERSION"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
